# BIDSFlow

./: .gitignore  README.md  codecov.yml  pyproject.toml
.codex/skills/bids-app-command-builder/: SKILL.md
.codex/skills/bids-app-command-builder/agents/: openai.yaml
.codex/skills/bids-app-command-builder/references/: tool-mapping.md
.codex/skills/cluster-runner-sge/: SKILL.md
.codex/skills/cluster-runner-sge/agents/: openai.yaml
.codex/skills/cluster-runner-sge/references/: sge-patterns.md
.codex/skills/project-config-schema/: SKILL.md
.codex/skills/project-config-schema/agents/: openai.yaml
.codex/skills/project-config-schema/references/: schema-rules.md
.github/workflows/: ci.yml
docs/design/: cli-conventions.md  config-strategy.md  config.md  execution-model.md  handoff-contract.md  heudiconv-workflow.md  project-init.md  stage-model.md  target-model.md  task-first-cli.md
docs/setup/: sge-site-config.md
examples/: project.toml
src/bidsflow/: __init__.py  cli.py  heudiconv.py  project.py
src/bidsflow/config/: load.py  models.py
src/bidsflow/core/: stages.py
src/bidsflow/scheduler/: __init__.py  models.py  sge.py
src/bidsflow/stages/: heudiconv.py
tests/: test_cli_heudiconv_bootstrap.py  test_cli_init.py  test_config_load.py  test_heudiconv.py  test_scheduler_sge.py
