[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bidsflow"
version = "0.1.0a0"
description = "Design documents for a task-first, target-oriented BIDS workflow CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Liang Zhang" }
]
